Add photo and more style

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container text-center" id="page-guide">
       <div class="row">
         <div class="col">
-          <a href="/">Homepage</a>
+          <a href="/" class="active">Homepage</a>
         </div>
         <div class="col">
           <a href="/photo.html">Photo</a>
