--- a/photo.html
+++ b/photo.html
@@ -15,13 +15,18 @@
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
+    <img
+      src="/src/croissants.jpg"
+      alt="3 croissants on a plate"
+      class="rounded"
+    />
     <div class="container text-center" id="page-guide">
       <div class="row">
         <div class="col">
           <a href="/">Homepage</a>
         </div>
         <div class="col">
-          <a href="/photo.html">Photo</a>
+          <a href="/photo.html" class="active">Photo</a>
         </div>
         <div class="col">
           <a href="/contact.html">Contact</a>
