--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
           <a href="/photo.html">Photo</a>
         </div>
         <div class="col">
-          <a href="/contact.html">Contact</a>
+          <a href="/contact.html" class="active">Contact</a>
         </div>
       </div>
     </div>
