--- a/photo.html
+++ b/photo.html
@@ -23,13 +23,15 @@
     <div class="container text-center" id="page-guide">
       <div class="row">
         <div class="col">
-          <a href="/">Homepage</a>
+          <a href="/" class="active">Homepage</a>
         </div>
         <div class="col">
-          <a href="/photo.html" class="active">Photo</a>
+          <a href="/photo.html" title="Croissants from the store Croissant.com"
+            >Photo</a
+          >
         </div>
         <div class="col">
-          <a href="/contact.html">Contact</a>
+          <a href="/contact.html" title="Contact Croissant.com">Contact</a>
         </div>
       </div>
     </div>
