--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact us - Croissant.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,13 +22,15 @@
     <div class="container text-center" id="page-guide">
       <div class="row">
         <div class="col">
-          <a href="/">Homepage</a>
+          <a href="/" class="active">Homepage</a>
         </div>
         <div class="col">
-          <a href="/photo.html">Photo</a>
+          <a href="/photo.html" title="Croissants from the store Croissant.com"
+            >Photo</a
+          >
         </div>
         <div class="col">
-          <a href="/contact.html" class="active">Contact</a>
+          <a href="/contact.html" title="Contact Croissant.com">Contact</a>
         </div>
       </div>
     </div>
