--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <meta
+      name="description"
+      content="Croissant.com is a chain of viennoiserie in Ukraine that proposes best product"
+    />
+    <title>Best Croissant in Odesa - Croissant.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,10 +51,12 @@
           <a href="/" class="active">Homepage</a>
         </div>
         <div class="col">
-          <a href="/photo.html">Photo</a>
+          <a href="/photo.html" title="Croissants from the store Croissant.com"
+            >Photo</a
+          >
         </div>
         <div class="col">
-          <a href="/contact.html">Contact</a>
+          <a href="/contact.html" title="Contact Croissant.com">Contact</a>
         </div>
       </div>
     </div>
